Starting making landing

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,4 +1,15 @@
-<app-header></app-header>
-<p>
-  landing works!
-</p>
+<landing-header></landing-header>
+<body>
+  <div class="h-screen">
+    пикча
+  </div>
+  <div class="h-screen" id="what-we-do">
+      Что мы делаем
+  </div>
+  <div class="h-screen" id="what-we-can-do">
+    Услуги
+  </div>
+  <div class="h-screen" id="about-us">
+    О компании
+  </div>
+</body>
