Working on landing + fixed header

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,7 +1,8 @@
 <landing-header></landing-header>
 <body>
-  <div class="h-screen">
-    пикча
+  <div class="h-screen object-contain overflow-hidden">
+    <img src="./../../assets/images/landing/pexels-daria-shevtsova-3626622.jpg"
+    class="h-screen w-screen object-cover overflow-hidden">
   </div>
   <div class="h-screen" id="what-we-do">
       Что мы делаем
