--- a/src/app/landing/header/header.component.html
+++ b/src/app/landing/header/header.component.html
@@ -1,24 +1,26 @@
 <div class="bg-white container mx-auto fixed">
-  <div class="flex justify-between items-center h-14 border-b ">
+  <div class="flex justify-between items-center h-14 border-b w-screen">
     <div class="flex items-center text-blue-500">
       <a href="./" class="mr-4">
-        <img class="h-14" src="./../../assets/images/logo.png" alt="Logo">
+        <img class="h-14 object-cover" src="./../../assets/images/logo.png" alt="Logo">
       </a>
-      <a href="#what-we-do" class="mx-4">
-        Что делаем?
-      </a>
-      <a href="#what-we-can-do" class="mx-4">
-        Услуги
-      </a>
-      <a href="#about-us" class="mx-4">
-        О компании
-      </a>
+      <div class="hidden md:block">
+        <a href="#what-we-do" class="mx-4">
+          Что мы делаем?
+        </a>
+        <a href="#what-we-can-do" class="mx-4">
+          Услуги
+        </a>
+        <a href="#about-us" class="mx-4">
+          О компании
+        </a>
+      </div>
     </div>
     <div class="flex items-center">
-      <button class="px-4 bg-white border-2 rounded-md border-blue-500 text-blue-500">
+      <button class="mx-2 bg-white border-2 rounded-md border-blue-500 text-blue-500">
         Войти
       </button>
-      <button class="mx-4 bg-blue-500 border-2 rounded-md border-blue-500 text-white">
+      <button class="mx-2 mr-8 bg-blue-500 border-2 rounded-md border-blue-500 text-white">
         Регистрация
       </button>
     </div>
