Made the first slide

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,8 +1,16 @@
 <landing-header></landing-header>
 <body>
-  <div class="h-screen object-contain overflow-hidden">
+  <div class="h-screen first-bg-container">
     <img src="./../../assets/images/landing/pexels-daria-shevtsova-3626622.jpg"
-    class="h-screen w-screen object-cover overflow-hidden">
+    class="h-screen w-screen object-cover">
+    <div class="first-bg-content">
+      <div class="text-white centered text-6xl font-bold">
+        ReviewGator - ваш помощник для мониторинга отзывов
+      </div>
+      <button class="bg-gradient-to-b join-button px-5 py-4 rounded-full text-white">
+        Присоединиться
+      </button>
+    </div>
   </div>
   <div class="h-screen" id="what-we-do">
       Что мы делаем
