--- a/src/app/landing/header/header.component.html
+++ b/src/app/landing/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="bg-white container mx-auto fixed">
+<div class="bg-white container mx-auto fixed z-10">
   <div class="flex justify-between items-center h-14 border-b w-screen">
     <div class="flex items-center text-blue-500">
       <a href="./" class="mr-4">
