--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,5 +1,5 @@
 <landing-header></landing-header>
-<body>
+<body class="montserrat">
   <div class="h-screen first-bg-container">
     <img src="./../../assets/images/landing/pexels-daria-shevtsova-3626622.jpg"
     class="h-screen w-screen object-cover">
@@ -7,13 +7,63 @@
       <div class="text-white centered text-6xl font-bold">
         ReviewGator - ваш помощник для мониторинга отзывов
       </div>
-      <button class="bg-gradient-to-b join-button px-5 py-4 rounded-full text-white">
+      <button class="bg-gradient-to-b join-button rg-color-gradient px-5 py-4 rounded-full text-white">
         Присоединиться
       </button>
     </div>
   </div>
-  <div class="h-screen" id="what-we-do">
-      Что мы делаем
+  <div class="p-36 pt-28" id="what-we-do">
+    <div class="text-5xl mb-24">
+      Что такое <span class="rg-style-text">ReviewGator</span>?
+    </div>
+    <div class="grid grid-cols-2 gap-24 mb-32">
+      <div>
+        <span class="font-bold text-3xl"><span class="rg-style-text">01</span> Ваш помощник</span>
+        <div class="border-t-2 border-black text-lg mt-4 pt-2">
+          Помогает бизнесу решать, важные задачи, при минимальных усилиях, не тратя на это ваше время
+        </div>
+      </div>
+      <div>
+        <span class="font-bold text-3xl"><span class="rg-style-text font-bold">02</span> Личный аналитик</span>
+        <div class="border-t-2 border-black text-lg mt-4 pt-2">
+          Снимает с вас отвественность по сбору информации о вашем продукте, мониторингу рейтинга, и контролю за его качеством.
+        </div>
+      </div>
+      <div>
+        <span class="font-bold text-3xl"><span class="rg-style-text font-bold">03</span> Надёжный сервис</span>
+        <div class="border-t-2 border-black text-lg mt-4 pt-2">
+          Круглосуточный мониторинг вашего бизнеса, быстрое и надежное уведомления, позволяющие повысить скорость работы с клиентом
+        </div>
+      </div>
+      <div>
+        <span class="font-bold text-3xl"><span class="rg-style-text font-bold">04</span> Доступное решение</span>
+        <div class="border-t-2 border-black text-lg mt-4 pt-2">
+          Ценообразнование, позволяющие любому приложению расшиить свои возможнотси и использовать весь спектр наших услуг  на полную!!!
+        </div>
+      </div>
+    </div>
+    <div class="grid grid-cols-2 gap-24 mb-16">
+      <img src="./../../assets/images/landing/photo-of-person-holding-mobile-phone-3183153.jpg" alt="">
+      <div class="text-3xl leading-relaxed self-center">
+        Доступ каждого бизнеса к его собранным данным, и свобода реализации своей собственной аналитики 
+      </div>
+    </div>
+    <div class="grid grid-cols-2 gap-24 mb-32">
+      <div class="bg-gray-700 rounded-3xl text-white text-center p-8 text-3xl">
+        Сервисы, с которыми мы работаем:
+        <div class="pt-4 mt-4 border-t-4 border-color grid grid-cols-3 gap-16 max-h-full">
+          <img class="max-h-32" src="./../../assets/images/services-logos/googleplay.png" alt="Google Play">
+          <img class="max-h-32" src="./../../assets/images/services-logos/appstore.png" alt="App Store">
+          <img class="max-h-32" src="./../../assets/images/services-logos/appgallery.png" alt="AppGallery">
+        </div>
+      </div>
+      <div class="bg-gray-700 rounded-3xl text-white text-center p-8 text-3xl">
+        Интеграции:
+        <div class="pt-4 mt-4 border-t-4 border-color">
+          <img class="max-h-32 mx-auto my-auto" src="./../../assets/images/services-logos/slack.png" alt="">
+        </div>
+      </div>
+    </div>
   </div>
   <div class="h-screen" id="what-we-can-do">
     Услуги
