--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,21 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
+.rg-color-gradient {
+    --tw-gradient-from: #BC3A80;
+    --tw-gradient-to: #3F3DB8;
+    --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(229, 231, 235, 0));
+}
+
+.rg-style-text {
+    @apply bg-gradient-to-b;
+    @apply text-transparent;
+    @apply bg-clip-text;
+    @apply rg-color-gradient;
+}
+
+.montserrat {
+    font-family: 'Montserrat', sans-serif;
+}
