--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -48,7 +48,7 @@
         Доступ каждого бизнеса к его собранным данным, и свобода реализации своей собственной аналитики 
       </div>
     </div>
-    <div class="grid grid-cols-2 gap-24 mb-32">
+    <div class="grid grid-cols-2 gap-24">
       <div class="bg-gray-700 rounded-3xl text-white text-center p-8 text-3xl">
         Сервисы, с которыми мы работаем:
         <div class="pt-4 mt-4 border-t-4 border-color grid grid-cols-3 gap-16 max-h-full">
@@ -65,10 +65,52 @@
       </div>
     </div>
   </div>
-  <div class="h-screen" id="what-we-can-do">
-    Услуги
+  <div class="p-36 pt-28" id="what-we-can-do">
+    <div class="text-center text-5xl mb-11">
+      Наши услуги:
+    </div>
+    <div class="text-center text-4xl pb-10">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+    </div>
+    <div class="grid grid-cols-4 gap-4">
+      <div class="bg-gray-700 h-40"></div>
+      <div class="bg-gray-700 h-40"></div>
+      <div class="bg-gray-700 h-40"></div>
+      <div class="bg-gray-700 h-40"></div>
+      <div class="bg-gray-700 h-40"></div>
+      <div class="bg-gray-700 h-40"></div>
+      <div class="bg-gray-700 h-40"></div>
+      <div class="bg-gray-700 h-40"></div>
+    </div>
   </div>
-  <div class="h-screen" id="about-us">
-    О компании
+  <div class="text-gray-400 bg-gray-800 pt-14 pb-10 text-center" id="about-us">
+    <span class=" text-base">Свяжитесь с нами:</span>
+    <img class="h-48 mx-auto" src="./../../assets/images/logo.png" alt="Logo">
+    <div class="">
+      Наша команда:
+      <div class="grid grid-cols-5 gap-4 grid-flow-col-dense md:w-1/2 xl:w-1/3 mx-auto pt-4">
+        <div>
+          <img class="object-cover mx-auto h-12 w-12 rounded-full" src="./../../assets/images/avatars/Nikita.jpg" alt="Nikita">
+          <span>Nikita</span>
+        </div>
+        <div>
+          <img class="object-cover mx-auto h-12 w-12 rounded-full" src="./../../assets/images/avatars/Daniella.jpg" alt="Nikita">
+          <span>Daniella</span>
+        </div>
+        <div>
+          <img class="object-cover mx-auto h-12 w-12 rounded-full" src="./../../assets/images/avatars/Ilya.jpg" alt="Nikita">
+          <span>Ilya</span>
+        </div>
+        <div>
+          <img class="object-cover mx-auto h-12 w-12 rounded-full" src="./../../assets/images/avatars/Oleg.jpg" alt="Nikita">
+          <span>Oleg</span>
+        </div>
+        <div>
+          <img class="object-cover mx-auto h-12 w-12 rounded-full" src="./../../assets/images/avatars/Rodion.jpg" alt="Nikita">
+          <span>Rodion</span>
+        </div>
+      </div>
+    </div>
+    <div class="text-gray-500 text-sm pt-16">Мы любим наших пользователей<br>❤</div>
   </div>
 </body>
