--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -88,26 +88,10 @@
     <img class="h-48 mx-auto" src="./../../assets/images/logo.png" alt="Logo">
     <div class="">
       Наша команда:
-      <div class="grid grid-cols-5 gap-4 grid-flow-col-dense md:w-1/2 xl:w-1/3 mx-auto pt-4">
-        <div>
-          <img class="object-cover mx-auto h-12 w-12 rounded-full" src="./../../assets/images/avatars/Nikita.jpg" alt="Nikita">
-          <span>Nikita</span>
-        </div>
-        <div>
-          <img class="object-cover mx-auto h-12 w-12 rounded-full" src="./../../assets/images/avatars/Daniella.jpg" alt="Nikita">
-          <span>Daniella</span>
-        </div>
-        <div>
-          <img class="object-cover mx-auto h-12 w-12 rounded-full" src="./../../assets/images/avatars/Ilya.jpg" alt="Nikita">
-          <span>Ilya</span>
-        </div>
-        <div>
-          <img class="object-cover mx-auto h-12 w-12 rounded-full" src="./../../assets/images/avatars/Oleg.jpg" alt="Nikita">
-          <span>Oleg</span>
-        </div>
-        <div>
-          <img class="object-cover mx-auto h-12 w-12 rounded-full" src="./../../assets/images/avatars/Rodion.jpg" alt="Nikita">
-          <span>Rodion</span>
+      <div class="flex justify-center mx-auto pt-4">
+        <div *ngFor="let member of OurTeam" class="px-4">
+          <img class="object-cover mx-auto h-12 w-12 rounded-full" src="{{member.image_url}}" alt="{{member.name}}">
+          <span>{{member.name}}</span>
         </div>
       </div>
     </div>
