--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -4,7 +4,7 @@
     <img src="./../../assets/images/landing/pexels-daria-shevtsova-3626622.jpg"
     class="h-screen w-screen object-cover">
     <div class="first-bg-content">
-      <div class="text-white centered text-6xl font-bold">
+      <div class="text-white centered w-5/6 md:w-3/5 text-2xl sm:text-6xl font-bold">
         ReviewGator - ваш помощник для мониторинга отзывов
       </div>
       <button class="bg-gradient-to-b join-button rg-color-gradient px-5 py-4 rounded-full text-white">
@@ -12,11 +12,11 @@
       </button>
     </div>
   </div>
-  <div class="p-36 pt-28" id="what-we-do">
+  <div class="p-4 sm:p-36 pt-28" id="what-we-do">
     <div class="text-5xl mb-24">
       Что такое <span class="rg-style-text">ReviewGator</span>?
     </div>
-    <div class="grid grid-cols-2 gap-24 mb-32">
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-24 mb-32">
       <div *ngFor="let description of WhatIsReviewGator; let i = index">
         <span class="font-bold text-3xl"><span class="rg-style-text">{{i > 9 ? "" : "0"}}{{i + 1}}</span> {{description.title}}</span>
         <div class="border-t-2 border-black text-lg mt-4 pt-2">
@@ -24,13 +24,13 @@
         </div>
       </div>
     </div>
-    <div class="grid grid-cols-2 gap-24 mb-16">
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-24 mb-16">
       <img src="./../../assets/images/landing/photo-of-person-holding-mobile-phone-3183153.jpg" alt="">
       <div class="text-3xl leading-relaxed self-center">
         Доступ каждого бизнеса к его собранным данным, и свобода реализации своей собственной аналитики 
       </div>
     </div>
-    <div class="grid grid-cols-2 gap-24">
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-24">
       <div class="bg-gray-700 rounded-3xl text-white text-center p-8 text-3xl">
         Сервисы, с которыми мы работаем:
         <div class="pt-4 mt-4 border-t-4 border-color grid grid-cols-3 gap-16 max-h-full">
@@ -45,14 +45,14 @@
       </div>
     </div>
   </div>
-  <div class="p-36 pt-28" id="what-we-can-do">
+  <div class="sm:p-36 sm:pt-28" id="what-we-can-do">
     <div class="text-center text-5xl mb-11">
       Наши услуги:
     </div>
     <div class="text-center text-4xl pb-10">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
     </div>
-    <div class="grid grid-cols-4 gap-4">
+    <div class="grid grid-cols-2 sm:grid-cols-4 gap-4">
       <div class="bg-gray-700 h-40"></div>
       <div class="bg-gray-700 h-40"></div>
       <div class="bg-gray-700 h-40"></div>
