--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,15 +1,18 @@
 <landing-header></landing-header>
 <body class="montserrat">
-  <div class="h-screen first-bg-container">
-    <img src="./../../assets/images/landing/pexels-daria-shevtsova-3626622.jpg"
-    class="h-screen w-screen object-cover">
-    <div class="first-bg-content">
-      <div class="text-white centered w-5/6 md:w-3/5 text-2xl sm:text-6xl font-bold">
-        ReviewGator - ваш помощник для мониторинга отзывов
+  <div class="carousel h-screen">
+    <div *ngFor="let slide of Slides;let i = index" class="h-screen bg-container"
+         [ngClass]="{faded:(i===currentSlide)}">
+      <img src="{{slide.img}}"
+           class="h-screen w-screen object-cover">
+      <div class="bg-content">
+        <div class="text-white centered w-5/6 md:w-3/5 text-2xl sm:text-6xl font-bold">
+          {{slide.text}}
+        </div>
+        <button class="bg-gradient-to-b join-button rg-color-gradient px-5 py-4 rounded-full text-white">
+          Присоединиться
+        </button>
       </div>
-      <button class="bg-gradient-to-b join-button rg-color-gradient px-5 py-4 rounded-full text-white">
-        Присоединиться
-      </button>
     </div>
   </div>
   <div class="p-4 sm:p-36 pt-28" id="what-we-do">
@@ -27,7 +30,7 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 gap-24 mb-16">
       <img src="./../../assets/images/landing/photo-of-person-holding-mobile-phone-3183153.jpg" alt="">
       <div class="text-3xl leading-relaxed self-center">
-        Доступ каждого бизнеса к его собранным данным, и свобода реализации своей собственной аналитики 
+        Доступ каждого бизнеса к его собранным данным, и свобода реализации своей собственной аналитики
       </div>
     </div>
     <div class="grid grid-cols-1 sm:grid-cols-2 gap-24">
