--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -1,13 +1,26 @@
-.first-bg-container {
-    position: relative;
+.bg-container {
+    position: absolute;
 }
 
-.first-bg-container .first-bg-content {
-    position: absolute;
+.bg-container .bg-content {
     bottom: 0;
     background: #BC3A8088;
     width: 100%;
     height: 100%;
+}
+
+.bg-content{
+  position: absolute;
+}
+
+.bg-container.faded{
+    transition: opacity 2s ease-in-out;
+    opacity: 0;
+}
+
+.bg-container:not(.faded){
+    opacity: 1;
+    transition: opacity 2s ease-in-out;
 }
 
 .centered {
