--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -2,12 +2,12 @@
 <body class="montserrat">
   <div class="h-screen">
     <div class="carousel">
-      <div *ngFor="let slide of Slides;let i = index" class="h-screen bg-container"
-      [ngClass]="{faded:(i===currentSlide)}">
+      <div *ngFor="let slide of Slides;let i = index" class="h-screen bg-container">
       <video src="../../assets/video/landing/background.mp4"
       class="h-screen w-screen object-cover" autoplay loop></video>
       <div class="bg-content">
-        <div class="text-white centered w-5/6 md:w-3/5 text-2xl sm:text-6xl font-bold">
+        <div class="bg-content-text text-white centered w-5/6 md:w-3/5 text-2xl sm:text-6xl font-bold"
+        [ngClass]="{faded:(i===currentSlide)}">
           {{slide.text}}
         </div>
         <button class="bg-gradient-to-b join-button rg-color-gradient px-5 py-4 rounded-full text-white">
