--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -13,14 +13,14 @@
   position: absolute;
 }
 
-.bg-container.faded{
-    transition: opacity 2s ease-in-out;
+.bg-content-text.faded{
+    transition: opacity 1s ease-in-out;
     opacity: 0;
 }
 
-.bg-container:not(.faded){
+.bg-content-text:not(.faded){
     opacity: 1;
-    transition: opacity 2s ease-in-out;
+    transition: opacity 1s ease-in-out;
 }
 
 .centered {
