--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,11 +1,11 @@
 <landing-header></landing-header>
-<body class="montserrat w-full overflow-x-hidden">
+<body class="montserrat">
   <div class="h-screen carousel">
-      <div class="h-screen bg-container">
+      <div class="bg-container">
         <video class="h-screen w-screen object-cover" autoplay muted loop>
           <source src="../../assets/video/landing/background.mp4">
         </video>
-        <div class=" h-screen w-screen  bg-content">
+        <div class="bg-content">
           <div *ngFor="let slide of Slides;let i = index" class="bg-content-text text-white centered w-5/6 md:w-3/5 text-2xl sm:text-6xl font-bold"
           [ngClass]="{faded:(i===currentSlide)}">
           {{slide.text}}
