--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -8,8 +8,9 @@
         <div class="bg-content">
           <div *ngFor="let slide of Slides;let i = index" class="bg-content-text text-white centered w-5/6 md:w-3/5 text-2xl sm:text-6xl font-bold"
           [ngClass]="{faded:(i===currentSlide)}">
-          {{slide.text}}
-        </div>
+            <p>{{slide.title}}</p>
+            <span class="{{slide.image}} text-3xl mt-4 p-1">{{slide.description}}</span>
+          </div>
         <button class="bg-gradient-to-b join-button rg-color-gradient px-5 py-4 rounded-full text-white">
           Присоединиться
         </button>
