--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -7,7 +7,7 @@
         </video>
         <div class="bg-content">
           <div *ngFor="let slide of Slides;let i = index" class="bg-content-text text-white centered w-5/6 md:w-3/5 text-2xl sm:text-6xl font-bold"
-          [ngClass]="{faded:(i===currentSlide)}">
+          [ngClass]="{faded:(i!==currentSlide)}">
             <p>{{slide.title}}</p>
             <span class="{{slide.image}} text-3xl mt-4 p-1">{{slide.description}}</span>
           </div>
