--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -77,7 +77,7 @@
       Наша команда:
       <div class="flex justify-center mx-auto pt-4">
         <div *ngFor="let member of OurTeam" class="px-4">
-          <img class="object-cover mx-auto h-12 w-12 rounded-full" src="{{member.image_url}}" alt="{{member.name}}">
+          <img class="object-cover mx-auto h-12 w-12 rounded-full" src="{{member.image}}" alt="{{member.name}}">
           <span>{{member.name}}</span>
         </div>
       </div>
