--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -39,14 +39,14 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 gap-24">
       <div class="bg-gray-700 rounded-3xl text-white text-center p-8 text-3xl">
         Сервисы, с которыми мы работаем:
-        <div class="pt-4 mt-4 border-t-4 border-color grid grid-cols-3 gap-16 max-h-full">
-          <img *ngFor="let service of Services" class="max-h-32" src="{{service.image_url}}" alt="{{service.name}}">
+        <div class="pt-4 mt-4 border-t-4 border-color flex flex-wrap justify-around">
+          <img *ngFor="let service of Services" class="max-h-32" src="{{service.image}}" alt="{{service.name}}">
         </div>
       </div>
       <div class="bg-gray-700 rounded-3xl text-white text-center p-8 text-3xl">
         Интеграции:
-        <div class="pt-4 mt-4 border-t-4 border-color">
-          <img *ngFor="let integration of Integrations" class="max-h-32 mx-auto my-auto" src="{{integration.image_url}}"
+        <div class="pt-4 mt-4 border-t-4 border-color flex flex-wrap justify-around">
+          <img *ngFor="let integration of Integrations" class="max-h-32 mx-auto my-auto" src="{{integration.image}}"
               alt="{{integration.name}}">
         </div>
       </div>
@@ -59,15 +59,13 @@
     <div class="text-center text-4xl pb-10">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
     </div>
-    <div class="grid grid-cols-2 sm:grid-cols-4 gap-4">
-      <div class="bg-gray-700 h-40"></div>
-      <div class="bg-gray-700 h-40"></div>
-      <div class="bg-gray-700 h-40"></div>
-      <div class="bg-gray-700 h-40"></div>
-      <div class="bg-gray-700 h-40"></div>
-      <div class="bg-gray-700 h-40"></div>
-      <div class="bg-gray-700 h-40"></div>
-      <div class="bg-gray-700 h-40"></div>
+    <div class="flex flex-wrap justify-between">
+      <div class="bg-gray-700 h-40 w-96 m-1"></div>
+      <div class="bg-gray-700 h-40 w-96 m-1"></div>
+      <div class="bg-gray-700 h-40 w-96 m-1"></div>
+      <div class="bg-gray-700 h-40 w-96 m-1"></div>
+      <div class="bg-gray-700 h-40 w-96 m-1"></div>
+      <div class="bg-gray-700 h-40 w-96 m-1"></div>
     </div>
   </div>
   <div class="text-gray-400 bg-gray-800 pt-14 pb-10 text-center" id="about-us">
