--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -3,7 +3,7 @@
   <div class="h-screen carousel">
       <div class="bg-container">
         <video class="h-screen w-screen object-cover" autoplay muted loop oncanplay="this.play()" onloadedmetadata="this.muted = true">
-          <source src="../../assets/video/landing/background.mp4">
+          <source src="./../../assets/video/landing/background.mp4">
         </video>
         <div class="bg-content">
           <div *ngFor="let slide of Slides;let i = index" class="bg-content-text text-white centered w-5/6 md:w-3/5 text-2xl sm:text-6xl font-bold"
