Alright, now it should deploy without workaround

--- a/src/app/landing/header/header.component.html
+++ b/src/app/landing/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="flex justify-between items-center h-14 border-b w-screen">
     <div class="flex items-center text-blue-500">
       <a href="./" class="mr-4">
-        <img class="h-14 object-cover" src="./../../assets/images/logo.png" alt="Logo">
+        <img class="h-14 object-cover" src="./assets/images/logo.png" alt="Logo">
       </a>
       <div class="hidden md:block">
         <a href="#what-we-do" class="mx-4">
