--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -3,7 +3,7 @@
   <div class="h-screen carousel">
       <div class="bg-container">
         <video class="h-screen w-screen object-cover" autoplay muted loop oncanplay="this.play()" onloadedmetadata="this.muted = true">
-          <source src="./../../assets/video/landing/background.mp4">
+          <source src="./assets/video/landing/background.mp4">
         </video>
         <div class="bg-content">
           <div *ngFor="let slide of Slides;let i = index" class="bg-content-text text-white centered w-5/6 md:w-3/5 text-2xl sm:text-6xl font-bold"
@@ -31,7 +31,7 @@
       </div>
     </div>
     <div class="grid grid-cols-1 sm:grid-cols-2 gap-24 mb-16">
-      <img src="./../../assets/images/landing/photo-of-person-holding-mobile-phone-3183153.jpg" alt="">
+      <img src="./assets/images/landing/photo-of-person-holding-mobile-phone-3183153.jpg" alt="">
       <div class="text-3xl leading-relaxed self-center">
         Доступ каждого бизнеса к его собранным данным, и свобода реализации своей собственной аналитики
       </div>
@@ -70,7 +70,7 @@
   </div>
   <div class="text-gray-400 bg-gray-800 pt-14 pb-10 text-center" id="about-us">
     <span class=" text-base">Свяжитесь с нами:</span>
-    <img class="h-48 mx-auto" src="./../../assets/images/logo.png" alt="Logo">
+    <img class="h-48 mx-auto" src="./assets/images/logo.png" alt="Logo">
     <div class="">
       Наша команда:
       <div class="flex justify-center mx-auto pt-4">
