Added decoration circles and ajusted slideshow

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -17,7 +17,8 @@
       </div>
     </div>
   </div>
-  <div class="p-4 sm:p-36 pt-28" id="what-we-do">
+  <div class="p-4 sm:p-36 pt-28 decor-container" id="what-we-do">
+    <img class="decor-1" src="./assets/images/landing/decor.svg" alt="">
     <div class="text-5xl mb-24">
       Что такое <span class="rg-style-text">ReviewGator</span>?
     </div>
@@ -30,13 +31,15 @@
         </div>
       </div>
     </div>
-    <div class="grid grid-cols-1 sm:grid-cols-2 gap-24 mb-16">
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-24 mb-16 decor-container">
+      <img class="decor-2" src="./assets/images/landing/decor.svg" alt="">
       <img src="./assets/images/landing/photo-of-person-holding-mobile-phone-3183153.jpg" alt="">
       <div class="text-3xl leading-relaxed self-center">
         Доступ каждого бизнеса к его собранным данным, и свобода реализации своей собственной аналитики
       </div>
     </div>
-    <div class="grid grid-cols-1 sm:grid-cols-2 gap-24">
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-24 decor-container">    
+      <img class="decor-3" src="./assets/images/landing/decor.svg" alt="">
       <div class="bg-gray-700 rounded-3xl text-white text-center p-8 text-3xl">
         Сервисы, с которыми мы работаем:
         <div class="pt-4 mt-4 border-t-4 border-color flex flex-wrap justify-around">
