Fix team member names not showing

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -78,8 +78,8 @@
       Наша команда:
       <div class="flex justify-center mx-auto pt-4">
         <div *ngFor="let member of OurTeam" class="px-4">
-          <img class="object-cover mx-auto h-12 w-12 rounded-full" src="{{member.image}}" alt="{{member.name}}">
-          <span>{{member.name}}</span>
+          <img class="object-cover mx-auto h-12 w-12 rounded-full" src="{{member.image}}" alt="{{member.title}}">
+          <span>{{member.title}}</span>
         </div>
       </div>
     </div>
