Added placeholder for reviews

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -11,7 +11,7 @@
             <p class="text-outline">{{slide.title}}</p>
             <span class="{{slide.image}} text-3xl mt-4 p-1">{{slide.description}}</span>
           </div>
-        <button class="bg-gradient-to-b join-button rg-color-gradient px-5 py-4 rounded-full text-white">
+        <button routerLink="/reviews" class="bg-gradient-to-b join-button rg-color-gradient px-5 py-4 rounded-full text-white">
           Присоединиться
         </button>
       </div>
