--- a/src/app/main/reviews/reviews.component.html
+++ b/src/app/main/reviews/reviews.component.html
@@ -1,12 +1,14 @@
-<body class="bg-blue-300 h-screen montserrat pt-8">
-  <div class="flex flex-wrap justify-around mx-16 items-center bg-white rounded-2xl mb-8 h-16">
+<landing-header></landing-header>
+<body class="bg-blue-300 montserrat pt-2">
+  <div class="flex flex-wrap justify-around mx-16 items-center bg-white rounded-2xl mb-4 h-16">
     <span class="font-bold">Фильтры:</span>
     <div class="mx-4">
-      <label class="pr-4" for="review-agregator">Агрегатор: </label>
-      <select id="review-argegator">
-        <option>Pen</option>
-        <option>Pineapple</option>
-        <option>Apple-pen</option>
+      <label class="pr-4" for="review-agregator">Платформа: </label>
+      <select id="review-platform">
+        <option>Любая</option>
+        <option value="appstore">AppStore</option>
+        <option value="google-play">Google Play</option>
+        <option value="appgallery">AppGallery</option>
       </select>
     </div>
     <div class="mx-4">
@@ -24,30 +26,55 @@
   <div class="grid grid-cols-3 mx-32 gap-16 h-5/6">
     <div class="bg-white rounded-2xl p-2 flex flex-col items-center">
       <div class="font-bold mb-4">Приложения</div>
+
       <button *ngFor="let app of Apps" class="w-11/12 rounded-xl flex items-center overflow-hidden mb-4 bg-gray-100">
         <div class="bg-gray-500 h-12 w-12 mr-4"></div>
           Приложение
       </button>
+      
       <div *ngIf="!Apps.length" class="text-center opacity-30">
         Кажется, у вас пока нету приложений. Попробуйте добавить их с помощью кнопки "+" внизу.
       </div>
-      <button class="mt-auto"><img src="./assets/images/main/plus.svg" alt=""></button>
+      <button class="mt-auto mb-4" (click)="openAddAppModal()"><img src="./assets/images/main/plus.svg" alt=""></button>
     </div>
     <div class="col-span-2 bg-white rounded-2xl p-2 flex flex-col items-center">
       <div class="font-bold mb-4">Отзывы</div>
+
       <div *ngFor="let review of Reviews" class="w-11/12 rounded-xl p-2 mb-4 bg-gray-100">
         <div>Пользователь пишет:</div>
         <div class="pl-4">ипущиуащшипшущишщпуипшщ</div>
       </div>
+
       <div *ngIf="!Reviews.length" class="text-center opacity-50">
         Выберите приложение из списка слева.
       </div>
+
       <div *ngIf="!Reviews.length" class="text-center opacity-50">
         Пока что отзывов нет... Внимательно следим за их появлением!
       </div>
+
       <div class="mt-auto">
         1 2 ... 99
       </div>
     </div>
   </div>
+  
+  <div class="add-app-modal bg-white rounded-3xl p-8">
+    <div class="flex justify-end">
+      <button (click)="openAddAppModal()"><img src="./assets/images/main/x.svg" alt=""></button>
+    </div>
+    <div>
+      <label for="app-link">Вставьте ссылку на <span class="font-bold">приложение</span>:</label>
+      <br>
+      <input id="app-link" type="text" class="rounded-3xl mt-2 mb-8 w-full">
+      <br>
+      <label for="slack-link">Вставьте ссылку на <span class="font-bold">Slack</span>:</label>
+      <br>
+      <input id="slack-link" type="text" class="rounded-3xl mt-2 mb-8 w-full">
+    </div>
+    <div class="flex justify-end">
+      <div class="mx-4 text-blue-400">Сохранить</div><div class="mx-4 text-blue-400"><button (click)="openAddAppModal()">Отменить</button></div>
+    </div>
+  </div>
+
 </body>
