--- a/src/app/main/reviews/app-config-modal/app-config-modal.component.html
+++ b/src/app/main/reviews/app-config-modal/app-config-modal.component.html
@@ -5,13 +5,14 @@
   <div>
     <label for="app-link">Вставьте ссылку на <span class="font-bold">приложение</span>:</label>
     <br>
-    <input id="app-link" type="text" class="rounded-3xl mt-2 mb-8 w-full">
+    <input id="app-link" type="text" class="rounded-3xl mt-2 mb-8 w-full" [value]="currentApp.appLink">
     <br>
     <label for="slack-link">Вставьте ссылку на <span class="font-bold">Slack</span>:</label>
     <br>
-    <input id="slack-link" type="text" class="rounded-3xl mt-2 mb-8 w-full">
+    <input id="slack-link" type="text" class="rounded-3xl mt-2 mb-8 w-full" [value]="currentApp.slackLink">
   </div>
   <div class="flex justify-end">
-    <div class="mx-4 text-blue-400">Сохранить</div><div class="mx-4 text-blue-400"><button (click)="openAddAppModal()">Отменить</button></div>
+    <div class="mx-4 text-blue-400"><button (click)="saveApp()">Сохранить</button></div>
+    <div class="mx-4 text-blue-400"><button (click)="openAddAppModal()">Отменить</button></div>
   </div>
 </div>
