--- a/src/app/main/reviews/reviews.component.html
+++ b/src/app/main/reviews/reviews.component.html
@@ -37,7 +37,7 @@
       </div>
       <button class="mt-auto mb-4" (click)="openAddAppModal()"><img src="./assets/images/main/plus.svg" alt=""></button>
     </div>
-    <div class="col-span-2 bg-white rounded-2xl p-2 flex flex-col items-center">
+    <div class="col-span-2 bg-white rounded-2xl p-2">
       <app-reviews-block
       [AppId]="currentAppId">
       </app-reviews-block>
