updated project logo

--- a/src/app/landing/header/header.component.html
+++ b/src/app/landing/header/header.component.html
@@ -1,8 +1,9 @@
 <div class="bg-white mx-auto fixed z-10 montserrat">
   <div class="flex justify-between items-center h-14 border-b w-screen">
     <div class="flex items-center text-blue-500">
-      <a href="./" class="mr-4">
-        <img class="h-14 object-cover" src="./assets/images/logo.png" alt="Logo">
+      <a href="./" class="mx-4 flex items-center justify-center">
+        <img class="h-14 object-cover p-2" src="./assets/images/logo.svg" alt="Logo">
+        <img class="h-14 object-cover p-2" src="./assets/images/logo_text.svg" alt="Logo">
       </a>
       <div class="hidden md:block">
         <a href="#what-we-do" class="mx-4">
