--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -73,7 +73,7 @@
   </div>
   <div class="text-gray-400 bg-gray-800 pt-14 pb-10 text-center" id="about-us">
     <span class=" text-base">Свяжитесь с нами:</span>
-    <img class="h-48 mx-auto" src="./assets/images/logo.png" alt="Logo">
+    <img class="h-48 mx-auto p-14" src="./assets/images/logo.svg" alt="Logo">
     <div class="">
       Наша команда:
       <div class="flex justify-center mx-auto pt-4">
