--- a/src/app/main/reviews/header/header.component.html
+++ b/src/app/main/reviews/header/header.component.html
@@ -1,8 +1,8 @@
 <div class="header mx-auto fixed z-10 montserrat">
   <div class="flex justify-between items-center h-14 w-screen">
     <div class="flex items-center text-blue-500">
-      <a href="./" class="mr-4">
-        <img class="h-14 object-cover" src="./assets/images/logo.png" alt="Logo">
+      <a href="./" class="mx-4 flex items-center justify-center">
+        <img class="h-14 object-cover p-2" src="./assets/images/logo.svg" alt="Logo">
       </a>
     </div>
     <div class="font-bold text-blue-500">
