--- a/src/app/main/reviews/app-config-modal/app-config-modal.component.html
+++ b/src/app/main/reviews/app-config-modal/app-config-modal.component.html
@@ -1,4 +1,4 @@
-<div class="add-app-modal bg-white rounded-3xl p-8">
+<div class="add-app-modal bg-white rounded-3xl p-8 hidden">
   <div class="flex justify-end">
     <button (click)="openAddAppModal()"><img src="./assets/images/main/x.svg" alt=""></button>
   </div>
