That's all for today

--- a/src/app/landing/header/header.component.html
+++ b/src/app/landing/header/header.component.html
@@ -8,6 +8,7 @@
       <div class="hidden md:block">
         <a href="#what-we-do" class="mx-4">
           Что мы делаем?
+          {{this.router.url}}
         </a>
         <a href="#what-we-can-do" class="mx-4">
           Услуги
