Draft of profile

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -10,5 +10,7 @@
       </div>
     </div>
   </div>
-  <div class="text-gray-500 text-sm pt-16">Мы любим наших пользователей<br>❤</div>
+  <div class="text-gray-500 text-sm pt-16">Мы любим наших пользователей</div>
+  <br>
+  <img class="mx-auto" src="./assets/images/heart.svg">
 </div>
