--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,6 +20,7 @@
 
     <div *ngIf="!this.isLanding" class="font-bold text-blue-500">
       <span *ngIf="this.router.url === '/reviews'">Отзывы</span>
+      <span *ngIf="this.router.url === '/profile'">Мой профиль</span>
     </div>
 
     <div class="flex items-center">
