--- a/src/app/main/profile/profile.component.html
+++ b/src/app/main/profile/profile.component.html
@@ -1,3 +1,23 @@
-<p>
-  profile works!
-</p>
+<body class="montserrat p-4">
+  <div class="mx-auto w-1/3 h-full bg-white rounded-3xl p-4">
+    <div class="bg-gray-100 py-4 px-6 rounded-xl mb-4">
+      <span class="font-bold">Профиль</span>
+      <div class="grid grid-cols-2">
+        <div>
+          Image goes here
+        </div>
+        <div>
+          <div>
+            <input type="text">
+            <input type="text">
+          </div>
+        </div>
+      </div>
+      Язык<input type="text">
+    <div class="mx-4 text-blue-400"><button>Сохранить</button></div>
+    </div>
+    <div class="bg-gray-100 py-4 px-6 rounded-xl">
+      <span class="font-bold">Платёжный блок</span>
+    </div>
+  </div>
+</body>
