--- a/src/app/main/profile/profile.component.html
+++ b/src/app/main/profile/profile.component.html
@@ -2,19 +2,21 @@
   <div class="mx-auto w-1/3 h-full bg-white rounded-3xl p-4">
     <div class="bg-gray-100 py-4 px-6 rounded-xl mb-4">
       <span class="font-bold">Профиль</span>
-      <div class="grid grid-cols-2">
-        <div>
-          Image goes here
-        </div>
-        <div>
-          <div>
-            <input type="text">
-            <input type="text">
-          </div>
-        </div>
+      <div>
+        <br>
+        <label for="name">Ваше имя</label><br>
+        <input id="name" class="w-full" type="text"><br><br>
+        <label for="email">Ваша почта</label><br>
+        <input id="email" class="w-full" type="text">
+      </div><br>
+      <div class="flex items-center justify-between">
+        <label for="language">Язык</label>
+        <select id="language">
+          <option>Русский</option>
+        </select>
       </div>
-      Язык<input type="text">
-    <div class="mx-4 text-blue-400"><button>Сохранить</button></div>
+      <br>
+      <div class="mx-4 text-blue-400"><button class="block mr-0 ml-auto">Сохранить</button></div>
     </div>
     <div class="bg-gray-100 py-4 px-6 rounded-xl">
       <span class="font-bold">Платёжный блок</span>
