Added navigation modal

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="mx-auto fixed z-10 montserrat" [ngClass]="this.isLanding ? 'headerLight' : 'headerDark'">
+<div class="mx-auto fixed z-10 montserrat" [ngClass]="this.isLanding ? 'header-light' : 'header-dark'">
   <div class="flex justify-between items-center h-14 border-b w-screen" [ngClass]="{'border-b':this.isLanding}">
     <div class="flex items-center text-blue-500">
       <a href="./" class="mx-4 flex items-center justify-center">
@@ -23,16 +23,23 @@
       <span *ngIf="this.router.url === '/profile'">Мой профиль</span>
     </div>
 
-    <div class="flex items-center">
-      <button *ngIf="this.isLanding" class="mx-2 bg-white border-2 rounded-md border-blue-500 text-blue-500">
+    <div class="flex items-center relative">
+      <button *ngIf="this.isLanding" class="welcome mx-2 bg-white border-2 rounded-md border-blue-500 text-blue-500">
         Войти
       </button>
-      <button *ngIf="this.isLanding" class="mx-2 mr-8 bg-blue-500 border-2 rounded-md border-blue-500 text-white">
+      <button *ngIf="this.isLanding" class="welcome mx-2 mr-8 bg-blue-500 border-2 rounded-md border-blue-500 text-white">
         Регистрация
       </button>
-      <button *ngIf="!this.isLanding" class="mx-2 mr-8">
+      <button *ngIf="!this.isLanding" class="mx-2 mr-8" (click)="toggleNavigation()">
         <img src="./assets/images/main/burger.svg" class="mx-auto">
       </button>
+
+      <div id="navigation" class="hidden absolute bg-white border-black border-1 w-64 right-16 top-16 rounded-3xl p-4">
+        <div>Ваше имя</div>
+        <hr class="mb-2">
+        <div><button routerLink="profile" (click)="toggleNavigation()">Мой профиль</button></div>
+        <div><button routerLink="reviews" (click)="toggleNavigation()">Отзывы</button></div>
+      </div>
     </div>
   </div>
 </div>
